Properly send the Type property when a new item is created.

* Previously items were all being created as generic secret.

https://bugzilla.gnome.org/show_bug.cgi?id=654425